maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: ';' expected but '[' found.
        return [i,j]
               ^JediEscaper:14: error: ';' expected but '(' found.
  var Biscuit:Array[Int](2) = getBisctuit();
                        ^